fix overlapping

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -47,5 +47,6 @@
     fill: #fff !important;
 }
 
-
-
+.ant-drawer {
+    z-index: 1020;
+}
